--- a/app/src/main/res/drawable/backgroundgradientblue.xml
+++ b/app/src/main/res/drawable/backgroundgradientblue.xml
@@ -4,9 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="#098bd3"
+        android:centerColor="#064A8E"
         android:endColor="#064584"
         android:angle="-90"/>
-    <corners
-        android:bottomLeftRadius="30dp"
-        android:bottomRightRadius="30dp"/>
 </shape>
