--- a/app/src/main/res/layout/fragment_superviseur_transation_assistant.xml
+++ b/app/src/main/res/layout/fragment_superviseur_transation_assistant.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -72,6 +73,8 @@
         android:id="@+id/progressBarMsgSuperviseurTransac"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Aucun résultat"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +84,8 @@
         android:id="@+id/progressBarTransacSuperviseur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerViewSuperviseurTransaction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
