--- a/app/src/main/res/drawable/backgroundgradientgray.xml
+++ b/app/src/main/res/drawable/backgroundgradientgray.xml
@@ -5,4 +5,6 @@
         android:startColor="#F1F1F1"
         android:endColor="#E3E3E3"
         android:angle="-90"/>
+    <corners
+        android:radius="5dp"/>
 </shape>
