--- a/app/src/main/res/layout/fragment_assistant_operation_tresor.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_tresor.xml
@@ -235,25 +235,6 @@
                             app:layout_constraintTop_toTopOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <CheckBox
-                        android:id="@+id/origine_check_tresor"
-                        android:layout_marginTop="5dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Origine des fonds"/>
-
-                    <EditText
-                        android:id="@+id/origine_fond_tresor"
-                        android:hint="Ecrire..."
-                        android:inputType="textMultiLine"
-                        android:lines="8"
-                        android:maxLines="10"
-                        android:minLines="6"
-                        android:visibility="gone"
-                        android:scrollbars="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"/>
-
                     <Button
                         android:id="@+id/uploadPhotoTresor"
                         android:layout_width="wrap_content"
@@ -263,10 +244,40 @@
                         android:layout_marginTop="15dp"
                         android:textColor="#0084C1"
                         android:textStyle="bold"
-                        android:backgroundTint="#FFFFFF"
+                        android:drawableLeft="@drawable/baseline_add_a_photo_24"
+                        android:backgroundTint="#EAEAEA"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintImagePreviewTresor"
+                        android:padding="10dp"
+                        android:layout_marginTop="7dp"
+                        android:visibility="gone"
+                        android:background="@color/background_color"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/imagePreviewTresor1"
+                            android:layout_width="70dp"
+                            android:layout_height="80dp"
+                            android:scaleType="centerCrop"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageView
+                            android:id="@+id/imagePreviewTresor2"
+                            android:layout_width="70dp"
+                            android:layout_height="80dp"
+                            android:layout_marginStart="5dp"
+                            android:scaleType="centerCrop"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/imagePreviewTresor1"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
                         android:id="@+id/stateInfoTresor"
@@ -274,7 +285,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:visibility="gone"
-                        android:textColor="#02B715"
+                        android:textColor="#D10303"
                         android:text="Photo téléchargée avec succès !"/>
 
                     <androidx.appcompat.widget.AppCompatButton
