--- a/app/src/main/res/layout/fragment_assistant_search_amount.xml
+++ b/app/src/main/res/layout/fragment_assistant_search_amount.xml
@@ -11,22 +11,25 @@
         android:id="@+id/searchAmount"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_margin="15dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/background_circular"
         android:hint="Rechercher un montant"
         android:iconifiedByDefault="false"
         android:inputType="number"
-        android:paddingStart="62dp"
+        android:paddingStart="75dp"
+        android:layout_marginHorizontal="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/searchAmountButton"
         android:layout_width="60dp"
         android:layout_height="44dp"
-        android:background="@drawable/backgroundallwhite"
+        android:background="@drawable/backgroundgradientgray"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_margin="2dp"
+        android:layout_marginStart="1dp"
         android:src="@drawable/baseline_search_24"
         app:layout_constraintBottom_toBottomOf="@+id/searchAmount"
         app:layout_constraintStart_toStartOf="@+id/searchAmount"
@@ -36,10 +39,10 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/search_date_phone_list_title"
         android:textStyle="bold"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/searchAmount"
+        app:layout_constraintStart_toStartOf="@+id/searchAmountButton"
         app:layout_constraintTop_toBottomOf="@+id/searchAmount" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -56,6 +59,17 @@
         android:id="@+id/progressBarSearchAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recyclerSearchMontant" />
+
+    <TextView
+        android:id="@+id/searchAmountNoResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aucun résultat"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
