--- a/app/src/main/res/layout/fragment_assistant_search_date.xml
+++ b/app/src/main/res/layout/fragment_assistant_search_date.xml
@@ -11,7 +11,9 @@
         android:id="@+id/datePicker"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_margin="15dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="15dp"
+        android:autofillHints="01/01/2023"
         android:background="@drawable/background_circular"
         android:clickable="false"
         android:cursorVisible="false"
@@ -20,20 +22,20 @@
         android:hint="@string/search_date_page_placeholder"
         android:iconifiedByDefault="false"
         android:inputType="date"
-        android:paddingStart="62dp"
+        android:paddingStart="75dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="RtlSymmetry"
-        android:autofillHints="01/01/2023" />
+        tools:ignore="RtlSymmetry" />
 
     <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/button_search_date"
+        android:id="@+id/searchDateButton"
         android:layout_width="60dp"
         android:layout_height="44dp"
-        android:background="@drawable/backgroundallwhite"
+        android:background="@drawable/backgroundgradientgray"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_margin="2dp"
+        android:layout_marginStart="1dp"
         android:src="@drawable/baseline_search_24"
         app:layout_constraintBottom_toBottomOf="@+id/datePicker"
         app:layout_constraintStart_toStartOf="@+id/datePicker"
@@ -46,7 +48,7 @@
         android:text="@string/search_date_page_list_title"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/button_search_date"
+        app:layout_constraintStart_toStartOf="@+id/searchDateButton"
         app:layout_constraintTop_toBottomOf="@+id/datePicker" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -63,6 +65,17 @@
         android:id="@+id/progressBarSearchdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recyclerViewSearchDate" />
+
+    <TextView
+        android:id="@+id/searchDateNoResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aucun résultat"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
