--- a/app/src/main/res/layout/fragment_assistant_search_phone.xml
+++ b/app/src/main/res/layout/fragment_assistant_search_phone.xml
@@ -11,23 +11,26 @@
         android:id="@+id/searchPhone"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_margin="15dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/background_circular"
         android:hint="Rechercher un numéro"
         android:iconifiedByDefault="false"
-        android:inputType="number"
-        android:paddingStart="62dp"
+        android:inputType="phone"
+        android:paddingStart="75dp"
+        android:layout_marginHorizontal="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlSymmetry,TextFields" />
 
     <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/searchPhoneButton"
         android:layout_width="60dp"
         android:layout_height="44dp"
-        android:background="@drawable/backgroundallwhite"
+        android:layout_marginStart="1dp"
+        android:background="@drawable/backgroundgradientgray"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_margin="2dp"
         android:src="@drawable/baseline_search_24"
         app:layout_constraintBottom_toBottomOf="@+id/searchPhone"
         app:layout_constraintStart_toStartOf="@+id/searchPhone"
@@ -40,7 +43,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/search_date_phone_list_title"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/searchPhone"
+        app:layout_constraintStart_toStartOf="@+id/searchPhoneButton"
         app:layout_constraintTop_toBottomOf="@+id/searchPhone" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -60,6 +63,17 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/recyclerViewSearch"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recyclerViewSearch" />
+
+    <TextView
+        android:id="@+id/searchPhoneNoResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aucun résultat"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewSearch"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerViewSearch"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/recyclerViewSearch" />
 
