--- a/app/src/main/res/layout/fragment_superviseur_capital.xml
+++ b/app/src/main/res/layout/fragment_superviseur_capital.xml
@@ -55,11 +55,15 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout6"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="horizontal"
-                android:layout_marginStart="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="10dp"
+                android:background="#D2E8ED"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView21">
 
@@ -69,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="-"
-                    android:textColor="#FF9800" />
+                    android:textColor="#FF6F00" />
 
                 <TextView
                     style="@style/TitleFont"
@@ -77,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="3dp"
                     android:text="FCFA"
-                    android:textColor="#FF9800" />
+                    android:textColor="#FF6F00" />
             </LinearLayout>
 
             <LinearLayout
