--- a/app/src/main/res/layout/fragment_superviseur_list_assistant_home.xml
+++ b/app/src/main/res/layout/fragment_superviseur_list_assistant_home.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -104,10 +104,13 @@
 
                                 <androidx.recyclerview.widget.RecyclerView
                                     android:id="@+id/recyclerViewListAssiatntHome"
-                                    android:layout_marginHorizontal="10dp"
-                                    android:layout_marginVertical="30dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="match_parent"/>
+                                    android:layout_height="match_parent"
+                                    android:layout_marginHorizontal="10dp"
+                                    android:layout_marginTop="10dp"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
 
                                 <ProgressBar
                                     android:id="@+id/progressBarListAssistant"
