--- a/app/src/main/res/layout/fragment_superviseur_settings.xml
+++ b/app/src/main/res/layout/fragment_superviseur_settings.xml
@@ -189,6 +189,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="15dp"
+                app:layout_constraintBottom_toBottomOf="@+id/superviseur_list_assistant_recyclerView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/superviseur_list_assistant_recyclerView" />
